--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,29 @@
 server:
   port: 8081
-
+  #servlet:
+    #context-path: "/blog"
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/security?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul
     username: cos
     password: cos1234
-    
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
 
   
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+      
+
+
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
