--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8081
-  #servlet:
-    #context-path: "/blog"
+  servlet:
+    context-path: "/"
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,6 +15,7 @@ spring:
 
   
   jpa:
+    open-in-view: true
     hibernate:
       ddl-auto: update
       naming:
